sort of fixed pathHandler